# PyExeMaker

./: LICENSE  README.md  changelog.md  pyproject.toml  spec_folder.spec  version-file.txt  workspace-project.json
app/: PyExeMaker.py
templates/: template-spec_folder.spec  template-spec_onefile.spec  template-workspace-project.json  version-file.json  versionfile-template.txt
